--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-    <div class="canvas">
-        <canvas id="snakCanvas" width="480" height="320">
+    <div class="container">
+        <canvas id="snakCanvas" class="canvas" width="480px" height="320px">
             browser does not support Canvas.
         </canvas>
     </div>
